--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -17,12 +17,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1: Selection Sort (Iterative Version)"
+    "1: Selection Sort:\n",
+    "\n",
+    "a> Iterative Version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +65,67 @@
     "array = np.array([5,4,3,2,1])\n",
     "print(selection_sort(array))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b> Recursive Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_selection_sort(arr, n=None, index=0):\n",
+    "    if n is None:\n",
+    "        n = len(arr)\n",
+    "    if index == n:\n",
+    "        return\n",
+    "    min_index = index\n",
+    "    for j in range(index + 1, n):\n",
+    "        if arr[j] < arr[min_index]:\n",
+    "            min_index = j\n",
+    "\n",
+    "    arr[index], arr[min_index] = arr[min_index], arr[index]\n",
+    "    recursive_selection_sort(arr, n, index + 1)\n",
+    "    return arr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(recursive_selection_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Insertion Sort\n",
+    "\n",
+    "a> Iterative version: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
