--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,17 +115,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Insertion Sort\n",
+    "2. Insertion Sort:\n",
     "\n",
     "a> Iterative version: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def insertion_sort(arr):\n",
+    "    for i in range(1,len(arr)):\n",
+    "        j = i\n",
+    "        while( arr[j-1] > arr[j]) and (j>0):\n",
+    "            arr[j-1],arr[j] = arr[j],arr[j-1]\n",
+    "            j -= 1\n",
+    "    return arr "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(insertion_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b> Recursive Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_insertion_sort(arr, n=None):\n",
+    "    if n is None:\n",
+    "        n = len(arr)\n",
+    "    if n <= 1:\n",
+    "        return arr\n",
+    "    recursive_insertion_sort(arr, n - 1)\n",
+    "    last = arr[n - 1]\n",
+    "    j = n - 2\n",
+    "    while j >= 0 and arr[j] > last:\n",
+    "        arr[j + 1] = arr[j]\n",
+    "        j -= 1\n",
+    "        \n",
+    "    arr[j + 1] = last\n",
+    "    return arr\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(recursive_insertion_sort(array))"
+   ]
   }
  ],
  "metadata": {
