--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -197,6 +197,30 @@
    "source": [
     "print(recursive_insertion_sort(array))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Bubble Sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a> Iterative Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iterative_bubble_sort(arr):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
