--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -4,22 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Implement iterative and full recursive version of following sorting techniques and repeat the experiment for larger values of n with different input patterns and plot the comparison graph of number of elements versus execution time taken. The elements can be read from a file or can be generated using random number generator.\n",
+    "### 1. Implement iterative and full recursive version of following sorting techniques and repeat the experiment for larger values of n with different input patterns and plot the comparison graph of number of elements versus execution time taken. The elements can be read from a file or can be generated using random number generator.\n",
     "\n",
-    "     a) Selection sort\n",
+    "-  a) Selection sort\n",
     "\n",
-    "     b) Insertion sort\n",
+    "-   b) Insertion sort\n",
     "\n",
-    "     c) Bubble sort"
+    "-   c) Bubble sort"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1: Selection Sort:\n",
+    "### 1: Selection Sort:\n",
     "\n",
-    "a> Iterative Version"
+    "- a> Iterative Version"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b> Recursive Version"
+    "- b> Recursive Version"
    ]
   },
   {
@@ -115,14 +115,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Insertion Sort:\n",
+    "### 2. Insertion Sort:\n",
     "\n",
-    "a> Iterative version: "
+    "- a> Iterative version: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -156,12 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b> Recursive Version"
+    "- b> Recursive Version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,14 +202,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Bubble Sort"
+    "### 3. Bubble Sort"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a> Iterative Version"
+    "- a> Iterative Version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def iterative_bubble_sort(arr):\n",
+    "    n = len(arr)\n",
+    "    for i in range(n):\n",
+    "        swapped = False\n",
+    "        # LAST i ELEMENTS ARE ALREADY IN PLACE\n",
+    "        for j in range(0,n-i-1):\n",
+    "            # Swap if the element found is greater than the next element else continue\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j],arr[j+1] = arr[j+1],arr[j]\n",
+    "                swapped = True\n",
+    "        if (swapped == False):\n",
+    "            break\n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(iterative_bubble_sort(array))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- b> Recursive "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_bubble_sort(arr,n):\n",
+    "    if n ==1:\n",
+    "        return\n",
+    "    for i in range(n-1):\n",
+    "        if arr[i] > arr[i+1]:\n",
+    "            arr[i],arr[i+1] = arr[i+1],arr[i]\n",
+    "    recursive_bubble_sort(arr,n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "recursive_bubble_sort(array,len(array))\n",
+    "print(array)\n",
+    "array = np.array([5,4,3,2,1]) #Need tp revert array back to the original so as to use it in next sorting techniques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Given an array of integers nums, sort the array in ascending order and return it. You must solve the problem without using any built-in functions in O(nlog(n)) time complexity and with the smallest space complexity possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sorting functions with O(nlog(n)) complexity are merge sort and quick sort (I am going to implement Quick Sort)"
    ]
   },
   {
@@ -217,10 +310,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def iterative_bubble_sort(arr):\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
