--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -307,10 +307,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#function that considers last elements as pivot\n",
+    "def partition(a,start,end):\n",
+    "    i = start-1\n",
+    "    pivot = a[end] #pivot element\n",
+    "    for j in range(start,end):\n",
+    "        if(a[j]<=pivot):\n",
+    "            i = i+1\n",
+    "            a[i],a[j] = a[j],a[i]\n",
+    "    a[i+1],a[end] = a[end],a[i+1]\n",
+    "    return i+1\n",
+    "\n",
+    "\n",
+    "#function to implement quick sort\n",
+    "def quick(a,start,end):\n",
+    "    if (start<end):\n",
+    "        p = partition(a,start,end)\n",
+    "        quick(a,start,p-1)\n",
+    "        quick(a,p+1,end)\n",
+    "\n",
+    "\n",
+    "def printArr(a):\n",
+    "    for i in range(len(a)):\n",
+    "        print(a[i],end=\" \")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before\n",
+      "5 4 3 2 1 \n",
+      "After\n",
+      "1 2 3 4 5 "
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Before\")\n",
+    "printArr(array)\n",
+    "print(\"\\nAfter\")\n",
+    "quick(array,0,len(array)-1)\n",
+    "printArr(array)"
+   ]
   }
  ],
  "metadata": {
