--- a/Practical_2.ipynb
+++ b/Practical_2.ipynb
@@ -360,6 +360,16 @@
     "quick(array,0,len(array)-1)\n",
     "printArr(array)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Selection sort: O(n^2) in all cases\n",
+    "- Insertion sort: O(n) = best case, O(n^2) in average/worst cases\n",
+    "- Bubble Sort: O(n) = best case, O(n^2) in average/worst cases\n",
+    "- Quick Sort: O(nlog(n)) = Best Casse, O(n^2) in worst case."
+   ]
   }
  ],
  "metadata": {
