--- a/Practical3.ipynb
+++ b/Practical3.ipynb
@@ -35,7 +35,7 @@
     "class Node:\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
-    "        self.color = \"RED\"  # New nodes are always red initially\n",
+    "        self.color = \"RED\"\n",
     "        self.left = None\n",
     "        self.right = None\n",
     "        self.parent = None"
