Red Black Tree Final

--- a/Practical3.ipynb
+++ b/Practical3.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Node:\n",
+    "class Node: # Node class to get a node object\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
-    "        self.color = \"RED\"\n",
+    "        self.color = \"RED\" # Initially every new node is set to Red\n",
     "        self.left = None\n",
     "        self.right = None\n",
     "        self.parent = None"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,6 @@
     "        self.root = self.TNULL\n",
     "\n",
     "    def insert(self, key):\n",
-    "        # Basic BST insertion logic\n",
     "        new_node = Node(key)\n",
     "        new_node.left = self.TNULL\n",
     "        new_node.right = self.TNULL\n",
@@ -67,7 +66,7 @@
     "                current = current.left\n",
     "            else:\n",
     "                current = current.right\n",
-    "\n",
+    "                \n",
     "        new_node.parent = parent\n",
     "\n",
     "        if parent is None:\n",
@@ -77,7 +76,6 @@
     "        else:\n",
     "            parent.right = new_node\n",
     "\n",
-    "        # Fix violations after insertion\n",
     "        if new_node.parent is None:\n",
     "            new_node.color = \"BLACK\"\n",
     "            return\n",
@@ -159,12 +157,13 @@
     "\n",
     "    def print_tree(self):\n",
     "        self.inorder_traversal(self.root)\n",
-    "        print(\"\\n\")"
+    "        print(\"\\n\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +185,7 @@
     "    rbt.insert(75)\n",
     "    rbt.insert(57)\n",
     "    rbt.print_tree()\n",
-    "    "
+    "    \n"
    ]
   }
  ],
