Implementation of Binomial Heap

--- a/Practical5.ipynb
+++ b/Practical5.ipynb
@@ -9,18 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Declaring a Node class to get node object\n",
     "class BinomialHeapNode:\n",
     "    def __init__(self, key):\n",
     "        self.key = key\n",
     "        self.degree = 0\n",
     "        self.child = None\n",
     "        self.sibling = None\n",
-    "        self.parent = None\n"
+    "        self.parent = None\n",
+    "\n",
+    "\n",
+    "def find_node_by_key(node, key):\n",
+    "    if node is None:\n",
+    "        return None\n",
+    "    if node.key == key:\n",
+    "        return node\n",
+    "    res = find_node_by_key(node.child, key)\n",
+    "    if res:\n",
+    "        return res\n",
+    "    return find_node_by_key(node.sibling, key)\n"
    ]
   },
   {
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,18 +235,13 @@
       "Inserted values: 10, 20, 5, 30, 2\n",
       "Minimum value in the heap: 2\n",
       "Extracted minimum value: 2\n",
-      "New minimum value after extraction: 5\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'find_node_by_key' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 28\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNew minimum value after extraction: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmin_node\u001b[38;5;241m.\u001b[39mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Decrease key of an element (20 to 1)\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m node_to_decrease \u001b[38;5;241m=\u001b[39m \u001b[43mfind_node_by_key\u001b[49m(heap, \u001b[38;5;241m20\u001b[39m)  \u001b[38;5;66;03m# Find the node with key 20\u001b[39;00m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m node_to_decrease:\n\u001b[0;32m     30\u001b[0m     heap\u001b[38;5;241m.\u001b[39mdecrease_key(node_to_decrease, \u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'find_node_by_key' is not defined"
+      "New minimum value after extraction: 5\n",
+      "Decreased key of node 20 to 1\n",
+      "Minimum value after decreasing key: 1\n",
+      "Extracted new minimum value: 1\n",
+      "New minimum value after extracting 1: 5\n",
+      "Deleting node with key: 5\n",
+      "New minimum value after deletion: 10\n"
      ]
     }
    ],
@@ -268,7 +273,7 @@
     "print(f\"New minimum value after extraction: {min_node.key}\")\n",
     "\n",
     "# Decrease key of an element (20 to 1)\n",
-    "node_to_decrease = find_node_by_key(heap, 20)  # Find the node with key 20\n",
+    "node_to_decrease = find_node_by_key(heap.head, 20)  # Find the node with key 20\n",
     "if node_to_decrease:\n",
     "    heap.decrease_key(node_to_decrease, 1)\n",
     "    print(\"Decreased key of node 20 to 1\")\n",
