Implementation of Binomial Heap

--- a/Practical3.ipynb
+++ b/Practical3.ipynb
@@ -42,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initializing a red black tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -186,6 +193,23 @@
     "    rbt.insert(57)\n",
     "    rbt.print_tree()\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time complexities of each operation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Insertion: O(log n)\n",
+    "- Fixing (after insertion): O(log n)\n",
+    "- Rotation: O(1)\n",
+    "- Inorder Traversal: O(n)"
    ]
   }
  ],
