--- a/Practical5.ipynb
+++ b/Practical5.ipynb
@@ -48,12 +48,11 @@
    "source": [
     "class BinomialHeap:\n",
     "    def __init__(self):\n",
-    "        self.head = None  # Head of the binomial heap (forest of binomial trees)\n",
+    "        self.head = None\n",
     "\n",
     "    def merge_trees(self, b1: BinomialHeapNode, b2: BinomialHeapNode) -> BinomialHeapNode:\n",
-    "        \"\"\"Helper function to merge two binomial trees of the same degree.\"\"\"\n",
     "        if b1.key > b2.key:\n",
-    "            b1, b2 = b2, b1  # Ensure b1 is the root of the resulting merged tree\n",
+    "            b1, b2 = b2, b1  \n",
     "        b2.parent = b1\n",
     "        b2.sibling = b1.child\n",
     "        b1.child = b2\n",
@@ -65,17 +64,13 @@
     "        self.head = self.merge_heaps(self.head, other_heap.head)\n",
     "        if self.head is None:\n",
     "            return None\n",
-    "\n",
     "        prev = None\n",
     "        curr = self.head\n",
     "        next = curr.sibling\n",
-    "\n",
     "        while next is not None:\n",
-    "            # Case 1: Degrees are different, move ahead\n",
     "            if curr.degree != next.degree or (next.sibling and next.sibling.degree == curr.degree):\n",
     "                prev = curr\n",
     "                curr = next\n",
-    "            # Case 2: Merge trees with the same degree\n",
     "            else:\n",
     "                if curr.key <= next.key:\n",
     "                    curr.sibling = next.sibling\n",
@@ -90,21 +85,18 @@
     "            next = curr.sibling\n",
     "\n",
     "    def merge_heaps(self, h1, h2):\n",
-    "        \"\"\"Merges two root lists of binomial heaps in non-decreasing order of degree.\"\"\"\n",
+    "        \"\"\"Merges two root lists of binomial heaps in increasing order of degree.\"\"\"\n",
     "        if h1 is None:\n",
     "            return h2\n",
     "        if h2 is None:\n",
     "            return h1\n",
-    "\n",
     "        if h1.degree <= h2.degree:\n",
     "            head = h1\n",
     "            h1 = h1.sibling\n",
     "        else:\n",
     "            head = h2\n",
     "            h2 = h2.sibling\n",
-    "\n",
     "        tail = head\n",
-    "\n",
     "        while h1 and h2:\n",
     "            if h1.degree <= h2.degree:\n",
     "                tail.sibling = h1\n",
@@ -129,7 +121,7 @@
     "        if self.head is None:\n",
     "            return None\n",
     "\n",
-    "        y = None  # Pointer to the min node\n",
+    "        y = None \n",
     "        x = self.head\n",
     "        min_val = float('inf')\n",
     "\n",
@@ -165,7 +157,6 @@
     "        else:\n",
     "            min_prev.sibling = min_node.sibling\n",
     "\n",
-    "        # Create a new heap with the children of the min_node in reverse order\n",
     "        child = min_node.child\n",
     "        temp_heap = BinomialHeap()\n",
     "        while child is not None:\n",
@@ -174,7 +165,6 @@
     "            temp_heap.head = child\n",
     "            child = next\n",
     "\n",
-    "        # Union the current heap with the new heap containing children of min_node\n",
     "        self.union(temp_heap)\n",
     "\n",
     "        return min_node.key\n",
@@ -202,17 +192,14 @@
     "        \"\"\"Recursively searches for a node with a given key in the binomial heap.\"\"\"\n",
     "        if node is None:\n",
     "            return None\n",
-    "\n",
-    "        # Check if the current node matches the key\n",
+    "        \n",
     "        if node.key == key:\n",
     "            return node\n",
     "\n",
-    "        # Recursively search among the child nodes\n",
     "        found_node = self.find_node_by_key(node.child, key)\n",
     "        if found_node:\n",
     "            return found_node\n",
     "\n",
-    "        # If not found in the children, recursively search among siblings\n",
     "        return self.find_node_by_key(node.sibling, key)"
    ]
   },
@@ -220,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing"
+    "### Testing the heap"
    ]
   },
   {
@@ -246,8 +233,6 @@
     }
    ],
    "source": [
-    "# Test cases for the Binomial Heap\n",
-    "\n",
     "# Creating the heap\n",
     "heap = BinomialHeap()\n",
     "\n",
