Time Complexity Analysis

--- a/Practical5.ipynb
+++ b/Practical5.ipynb
@@ -289,6 +289,41 @@
     "else:\n",
     "    print(\"Heap is empty after deletion.\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time complexity Analysis:\n",
+    "- Insertion: \n",
+    "\n",
+    "    Best : O(1) -> Adding into an empty heap \n",
+    "    \n",
+    "    Worst : O(log(n)) -> May need to merge the trees\n",
+    "- Finding Min: \n",
+    "    \n",
+    "    O(log(n)) -> Coz searching through root list\n",
+    "- Extract Min:\n",
+    "\n",
+    "    Best : O(log(n))\n",
+    "    \n",
+    "    Worst : O(log(n))\n",
+    "- Union: \n",
+    "\n",
+    "    Best : O(1) -> Both heaps have no trees with same degree\n",
+    "\n",
+    "    Worst: O(log(n)) -> Because Reorganisation is needed\n",
+    "- Decrease Key: \n",
+    "\n",
+    "    Best: O(1) -> No rearranging of nodes required\n",
+    "\n",
+    "    Worst : O(log(n)) -> As node may be moved up\n",
+    "- Delete: \n",
+    "\n",
+    "    Best: O(log(n)) -> Decrease Key followes by extract minimum\n",
+    "\n",
+    "    Worst : O(log(n))"
+   ]
   }
  ],
  "metadata": {
