--- a/Practical5.ipynb
+++ b/Practical5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,16 @@
     "        self.child = None\n",
     "        self.sibling = None\n",
     "        self.parent = None\n",
+    "    \n",
+    "    def print_node(self, level=0):\n",
+    "        \"\"\"Prints the current node and its children.\"\"\"\n",
+    "        indent = \" \" * level * 4  \n",
+    "        print(f\"{indent}{self.key} (Degree: {self.degree})\")\n",
+    "        \n",
+    "        if self.child:\n",
+    "            self.child.print_node(level + 1)\n",
+    "        if self.sibling:\n",
+    "            self.sibling.print_node(level)  \n",
     "\n",
     "\n",
     "def find_node_by_key(node, key):\n",
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +210,18 @@
     "        if found_node:\n",
     "            return found_node\n",
     "\n",
-    "        return self.find_node_by_key(node.sibling, key)"
+    "        return self.find_node_by_key(node.sibling, key)\n",
+    "    def print_heap(self):\n",
+    "        \"\"\"Prints the entire binomial heap.\"\"\"\n",
+    "        if self.head is None:\n",
+    "            print(\"Heap is empty.\")\n",
+    "            return\n",
+    "        print(\"Binomial Heap:\")\n",
+    "        node = self.head\n",
+    "        while node:\n",
+    "            print(f\"Tree with root {node.key}:\")\n",
+    "            node.print_node()\n",
+    "            node = node.sibling "
    ]
   },
   {
@@ -212,22 +233,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted values: 10, 20, 5, 30, 2\n",
+      "Binomial Heap:\n",
+      "Tree with root 20:\n",
+      "20 (Degree: 0)\n",
+      "Binomial Heap:\n",
+      "Tree with root 10:\n",
+      "10 (Degree: 1)\n",
+      "    20 (Degree: 0)\n",
+      "Binomial Heap:\n",
+      "Tree with root 15:\n",
+      "15 (Degree: 0)\n",
+      "10 (Degree: 1)\n",
+      "    20 (Degree: 0)\n",
+      "Tree with root 10:\n",
+      "10 (Degree: 1)\n",
+      "    20 (Degree: 0)\n",
+      "Binomial Heap:\n",
+      "Tree with root 4:\n",
+      "4 (Degree: 2)\n",
+      "    10 (Degree: 1)\n",
+      "        20 (Degree: 0)\n",
+      "    15 (Degree: 0)\n",
+      "Binomial Heap:\n",
+      "Tree with root 2:\n",
+      "2 (Degree: 0)\n",
+      "4 (Degree: 2)\n",
+      "    10 (Degree: 1)\n",
+      "        20 (Degree: 0)\n",
+      "    15 (Degree: 0)\n",
+      "Tree with root 4:\n",
+      "4 (Degree: 2)\n",
+      "    10 (Degree: 1)\n",
+      "        20 (Degree: 0)\n",
+      "    15 (Degree: 0)\n",
       "Minimum value in the heap: 2\n",
       "Extracted minimum value: 2\n",
-      "New minimum value after extraction: 5\n",
-      "Decreased key of node 20 to 1\n",
-      "Minimum value after decreasing key: 1\n",
-      "Extracted new minimum value: 1\n",
-      "New minimum value after extracting 1: 5\n",
-      "Deleting node with key: 5\n",
+      "New minimum value after extraction: 4\n",
+      "Decreased key of node\n",
+      "Minimum value after decreasing key: 4\n",
+      "Extracted new minimum value: 4\n",
+      "New minimum value after extracting 1: 6\n",
+      "Deleting node with key: 6\n",
       "New minimum value after deletion: 10\n"
      ]
     }
@@ -237,13 +290,13 @@
     "heap = BinomialHeap()\n",
     "\n",
     "# Insert elements into the heap\n",
-    "heap.insert(10)\n",
-    "heap.insert(20)\n",
-    "heap.insert(5)\n",
-    "heap.insert(30)\n",
-    "heap.insert(2)\n",
+    "n = int(input(\"Enter the number of elements you wish to add: \"))\n",
+    "for _ in range(n):\n",
+    "    x = int(input(\"Enter the value of the element: \"))\n",
+    "    heap.insert(x)\n",
+    "    heap.print_heap()\n",
     "\n",
-    "print(\"Inserted values: 10, 20, 5, 30, 2\")\n",
+    "\n",
     "\n",
     "# Get the minimum value from the heap\n",
     "min_node = heap.get_min()\n",
@@ -256,14 +309,15 @@
     "# Get the minimum value again after extraction\n",
     "min_node = heap.get_min()\n",
     "print(f\"New minimum value after extraction: {min_node.key}\")\n",
+    "x = int(input(\"Enter the node to decrease its Key: \"))\n",
+    "y = int(input(\"Enter the new value: \"))\n",
     "\n",
-    "# Decrease key of an element (20 to 1)\n",
-    "node_to_decrease = find_node_by_key(heap.head, 20)  # Find the node with key 20\n",
+    "node_to_decrease = find_node_by_key(heap.head, x)  # Find the node with key x\n",
     "if node_to_decrease:\n",
-    "    heap.decrease_key(node_to_decrease, 1)\n",
-    "    print(\"Decreased key of node 20 to 1\")\n",
+    "    heap.decrease_key(node_to_decrease, y)\n",
+    "    print(\"Decreased key of node\")\n",
     "else:\n",
-    "    print(\"Node with key 20 not found\")\n",
+    "    print(\"Node with key not found\")\n",
     "\n",
     "# Get the new minimum value after decrease key operation\n",
     "min_node = heap.get_min()\n",
